@@ -1,5 +1,5 @@
 #!@SH@
-# $NetBSD: scan-client-start,v 1.2 2008/09/16 18:21:30 joerg Exp $
+# $NetBSD: scan-client-start,v 1.3 2012/11/23 12:13:35 joerg Exp $
 
 . @PBULK_CONFIG@
 
@@ -11,6 +11,12 @@ if [ "${config_version}" != "@PBULK_CONFIG_VERSION@" ]; then
 	exit 1
 fi
 
+if [ -f "${bulklog}.old/meta/pscan" ]; then
+	extra_pscan_args="-L ${bulklog}.old/meta/pscan"
+else
+	extra_pscan_args=""
+fi
+
 for client in ${scan_clients}; do
-	ssh $client "${pscan_prepare} && ${pscan} -c ${master_port_scan} -M ${make} ${pkgsrc}" &
+	ssh $client "${pscan_prepare} && ${pscan} -c ${master_port_scan} -M ${make} ${extra_pscan_args} ${pkgsrc}" &
 done
